# llm-relations

./: .gitignore  COWORK_REVIEW.md  PROBLEM.md  README.md  pyproject.toml  skiv_analogy.html
analysis/: report.ipynb
docs/superpowers/plans/: 2026-04-18-lmstudio-backend.md  2026-04-18-relational-benchmark.md  2026-04-19-append-benchmark-runs.md  2026-04-19-prompt-variants.md
docs/superpowers/specs/: 2026-04-18-lmstudio-backend-design.md  2026-04-18-relational-benchmark-design.md  (+2 more)
problems/: adversarial_00.json  adversarial_01.json  adversarial_02.json  adversarial_03.json  adversarial_04.json  baseline_00.json  baseline_01.json  baseline_02.json  baseline_03.json  baseline_04.json  control_00.json  control_01.json  control_02.json  control_03.json  control_04.json  cross_domain_00.json  cross_domain_01.json  cross_domain_02.json  cross_domain_03.json  cross_domain_04.json  feature_misleading_00.json  feature_misleading_01.json  feature_misleading_02.json  feature_misleading_03.json  feature_misleading_04.json  scale_00.json  scale_01.json  scale_02.json  scale_03.json  scale_04.json
scripts/: freeze_corpus.py  rebuild_summary.py  run_benchmark.py
src/llm_relations/: palette.py  parser.py  problem.py  scorer.py
tests/: test_corpus.py  test_generator_adversarial.py  test_generator_baseline.py  test_generator_cross_domain.py  test_generator_feature_misleading.py  test_generator_scale.py  test_palette.py  test_parser.py  test_problem.py  test_runner_benchmark.py  test_runner_client.py  test_runner_specs.py  test_scorer.py  test_smoke_api.py  test_smoke_lmstudio.py
(+8 files in other folders)
