[project]
name = "llm-relations"
version = "0.1.0"
description = "Relational reasoning benchmark for Claude models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.9.0",
    "tenacity>=9.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "jupyter>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_relations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "smoke: hits a real external API (Anthropic or LMStudio); opt-in",
]
